--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                     <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
                                 </div>
                             <h2 class="card-title">K. Accessories</h2>
-                            <p><span>25.00</span> TK</p>
+                            <p><span>39.00</span> TK</p>
                             </div>
                         </div> 
                         <!-- card-2  -->
@@ -71,7 +71,7 @@
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 </div>
-                            <h2 class="card-title">K. Accessories</h2>
+                            <h2 class="card-title">C. Accessories</h2>
                             <p><span>25.00</span> TK</p>
                             </div>
                         </div> 
@@ -215,14 +215,14 @@
                         </div>
                     </div>
                     <div class="border p-10 bg-white space-y-3 mt-10">
-                        <div id="selectItem" class="text-2xl font-medium">
+                        <div id="selectItem" class="text-2xl font-medium list-decimal">
 
                         </div>
                         <hr>
                         <div id="itemsPrice" class="space-y-2">
-                            <h6  class="text-2xl font-medium">Total Price: <span id="totalPrice"  class="text-slate-300">00.00 TK</span> </h6>
-                            <h6 class="text-2xl font-medium">Discount:  <span class="text-slate-300">00.00 TK</span> </h6>
-                            <h6 class="text-2xl font-medium">Total: <span class="text-slate-300">00.00 TK</span> </h6>
+                            <h6  class="text-2xl font-medium">Total Price: <span id="totalPrice"  class="text-slate-300">00.00 </span><span  class="text-slate-300"> TK </span></h6>
+                            <h6 class="text-2xl font-medium">Discount:  <span id="discount" class="text-slate-300">00.00 </span><span  class="text-slate-300"> TK </span> </h6>
+                            <h6 class="text-2xl font-medium">Total: <span id="finalTotal" class="text-slate-300">00.00 </span><span  class="text-slate-300"> TK </span> </h6>
                         </div>
                         <hr>
                     </div>
