--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
     <header class="bg-[#F9F6E2]">
       <!-- banner Section -->
       <section class="max-w-screen-xl mx-auto">
-        <div class="flex gap-7 items-center">
+        <div class="lg:flex grid md:grid-cols-1  gap-7 items-center ">
           <div class="space-y-8 text-justify">
-            <h4 class="text-4xl font-medium text-center">---SALE FEVER---</h4>
-            <p class="text-5xl font-bold">
-              Purchase TK 200 or <br />
-              above & get <span class="text-[#E527B2]">20% off</span>
-            </p>
-            <div class="flex gap-6 items-center">
-              <p class="text-2xl font-medium">Use Promo Code</p>
-              <button
-                class="bg-[#E527B2] px-5 py-3 text-white rounded-lg font-semibold text-2xl"
-              >
-                SELL200
-              </button>
-            </div>
+                <h4 class="text-4xl font-medium text-center">---SALE FEVER---</h4>
+                <p class="lg:text-5xl text-4xl text-center font-bold">
+                Purchase TK 200 or <br />
+                above & get <span class="text-[#E527B2]">20% off</span>
+                </p>
+                <div class="flex gap-6 items-center justify-center">
+                    <p class="text-2xl font-medium">Use Promo Code</p>
+                    <button
+                        class="bg-[#E527B2] px-5 py-3 text-white rounded-lg font-semibold text-2xl"
+                    >
+                        SELL200
+                    </button>
+                </div>
           </div>
           <div>
             <img src="./images/Summer 1.png" alt="" />
@@ -55,10 +55,10 @@
     </header>
     <main class="bg-[#F8F8F8]">
       <section class="max-w-screen-xl mx-auto">
-        <div class="flex gap-8">
+        <div class="lg:flex grid md:grid-cols-1 gap-8">
           <div class="mt-32">
             <h2 class="text-4xl font-semibold mb-8">Kitchenware</h2>
-            <div class="flex gap-6">
+            <div class="lg:flex gap-6 grid md:grid-cols-2 sd:grid-cols-1">
               <!-- card-1  -->
               <div
                 onclick="cardClick(this)"
@@ -200,7 +200,7 @@
             </div>
             <!-- sportswear section -->
             <h2 class="text-4xl font-semibold mb-8 mt-[56px]">Sportswear</h2>
-            <div class="flex gap-6">
+            <div class="lg:flex grid md:grid-cols-2 sd:grid-cols-1 gap-6">
               <!-- card-4  -->
               <div
                 onclick="cardClick(this)"
@@ -341,7 +341,7 @@
             </div>
             <!-- furniture section -->
             <h2 class="text-4xl font-semibold mb-8 mt-[56px]">Furniture</h2>
-            <div class="flex gap-6 mb-5">
+            <div class="lg:flex grid md:grid-cols-2 sd:grid-cols-1 gap-6 mb-5">
               <!-- card-7  -->
               <div
                 onclick="cardClick(this)"
