--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
               <div
                 onclick="cardClick(this)"
                 data-item="K. Accessories"
-                class="card bg-base-100 shadow-xl border"
+                class="card bg-base-100 shadow-xl border lg:w-[60%]"
               >
-                <figure class="p-5">
+                <figure class="p-5 ">
                   <img
                     src="./images/prod1.png"
                     alt=""
@@ -109,7 +109,7 @@
               <div
                 onclick="cardClick(this)"
                 data-item="C. Accessories"
-                class="card bg-base-100 shadow-xl border"
+                class="card bg-base-100 shadow-xl border lg:w-[60%]"
               >
                 <figure class="p-5">
                   <img
@@ -155,7 +155,7 @@
               <div
                 onclick="cardClick(this)"
                 data-item="Home Cooker"
-                class="card bg-base-100 shadow-xl border"
+                class="card bg-base-100 shadow-xl border lg:w-[60%]"
               >
                 <figure class="p-5">
                   <img
@@ -205,7 +205,7 @@
               <div
                 onclick="cardClick(this)"
                 data-item="Sports Back Cap"
-                class="card bg-base-100 shadow-xl border"
+                class="card bg-base-100 shadow-xl border lg:w-[60%]"
               >
                 <figure class="p-5">
                   <img
@@ -251,7 +251,7 @@
               <div
                 onclick="cardClick(this)"
                 data-item="Full Jersey Set"
-                class="card bg-base-100 shadow-xl border"
+                class="card bg-base-100 shadow-xl border lg:w-[60%]"
               >
                 <figure class="p-5">
                   <img
@@ -266,22 +266,23 @@
                       type="radio"
                       name="rating-5"
                       class="mask mask-star-2 bg-orange-400"
-                    />
-                    <input
-                      type="radio"
-                      name="rating-5"
-                      class="mask mask-star-2 bg-orange-400"
-                    />
-                    <input
-                      type="radio"
-                      name="rating-5"
-                      class="mask mask-star-2 bg-orange-400"
-                    />
-                    <input
-                      type="radio"
-                      name="rating-5"
-                      class="mask mask-star-2 bg-orange-400"
                       checked
+                    />
+                    <input
+                      type="radio"
+                      name="rating-5"
+                      class="mask mask-star-2 bg-orange-400"
+                    />
+                    <input
+                      type="radio"
+                      name="rating-5"
+                      class="mask mask-star-2 bg-orange-400"
+                    />
+                    <input
+                      type="radio"
+                      name="rating-5"
+                      class="mask mask-star-2 bg-orange-400"
+                      
                     />
                     <input
                       type="radio"
@@ -296,7 +297,7 @@
               <!-- card-6  -->
               <div
                 onclick="cardClick(this)"
-                class="card bg-base-100 shadow-xl border"
+                class="card bg-base-100 shadow-xl border lg:w-[60%]"
               >
                 <figure class="p-5">
                   <img
@@ -345,7 +346,7 @@
               <!-- card-7  -->
               <div
                 onclick="cardClick(this)"
-                class="card bg-base-100 shadow-xl border"
+                class="card bg-base-100 shadow-xl border lg:w-[60%]"
               >
                 <figure class="p-5">
                   <img
@@ -358,28 +359,28 @@
                   <div class="rating rating-md">
                     <input
                       type="radio"
-                      name="rating-4"
+                      name="rating-7"
                       class="mask mask-star-2 bg-orange-400"
                     />
                     <input
                       type="radio"
-                      name="rating-4"
+                      name="rating-7"
                       class="mask mask-star-2 bg-orange-400"
                       checked
                     />
                     <input
                       type="radio"
-                      name="rating-4"
+                      name="rating-7"
                       class="mask mask-star-2 bg-orange-400"
                     />
                     <input
                       type="radio"
-                      name="rating-4"
+                      name="rating-7"
                       class="mask mask-star-2 bg-orange-400"
                     />
                     <input
                       type="radio"
-                      name="rating-4"
+                      name="rating-7"
                       class="mask mask-star-2 bg-orange-400"
                     />
                   </div>
@@ -390,7 +391,7 @@
               <!-- card-8  -->
               <div
                 onclick="cardClick(this)"
-                class="card bg-base-100 shadow-xl border"
+                class="card bg-base-100 shadow-xl border lg:w-[60%]"
               >
                 <figure class="p-5">
                   <img
@@ -403,28 +404,28 @@
                   <div class="rating rating-md">
                     <input
                       type="radio"
-                      name="rating-5"
+                      name="rating-8"
                       class="mask mask-star-2 bg-orange-400"
                     />
                     <input
                       type="radio"
-                      name="rating-5"
+                      name="rating-8"
                       class="mask mask-star-2 bg-orange-400"
                     />
                     <input
                       type="radio"
-                      name="rating-5"
+                      name="rating-8"
                       class="mask mask-star-2 bg-orange-400"
                     />
                     <input
                       type="radio"
-                      name="rating-5"
+                      name="rating-8"
                       class="mask mask-star-2 bg-orange-400"
                       checked
                     />
                     <input
                       type="radio"
-                      name="rating-5"
+                      name="rating-8"
                       class="mask mask-star-2 bg-orange-400"
                     />
                   </div>
@@ -435,7 +436,7 @@
               <!-- card-9  -->
               <div
                 onclick="cardClick(this)"
-                class="card bg-base-100 shadow-xl border"
+                class="card bg-base-100 shadow-xl border lg:w-[60%]"
               >
                 <figure class="p-5">
                   <img
@@ -448,28 +449,28 @@
                   <div class="rating rating-md">
                     <input
                       type="radio"
-                      name="rating-6"
+                      name="rating-9"
                       class="mask mask-star-2 bg-orange-400"
                     />
                     <input
                       type="radio"
-                      name="rating-6"
+                      name="rating-9"
                       class="mask mask-star-2 bg-orange-400"
                       checked
                     />
                     <input
                       type="radio"
-                      name="rating-6"
+                      name="rating-9"
                       class="mask mask-star-2 bg-orange-400"
                     />
                     <input
                       type="radio"
-                      name="rating-6"
+                      name="rating-9"
                       class="mask mask-star-2 bg-orange-400"
                     />
                     <input
                       type="radio"
-                      name="rating-6"
+                      name="rating-9"
                       class="mask mask-star-2 bg-orange-400"
                     />
                   </div>
