button size fixed

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
               <!-- Open the modal using ID.showModal() method -->
               <button
                 id="btnPurchase"
-                class="bg-[#ddd] py-3 px-4 -mt-28 text-white rounded-lg"
+                class="bg-[#ddd] py-3 px-4 -mt-28 text-white rounded-lg w-[294px] h-[56px]"
                 onclick="my_modal_1.showModal()"
                 disabled
               >
